# controllers/post.js
@@ -191,6 +191,26 @@ const post = {
     );
     res.status(201).json(getHttpResponseContent('按讚貼文成功'));
   }),
+  // 刪除特定的貼文
+  deletePost: asyncHandleError(async (req, res, next) => {
+    const {
+      user,
+      params: { postId },
+    } = req;
+    if (!(postId && isValidObjectId(postId)))
+      return next(appError(400, '請傳入特定的貼文'));
+
+    const existedPost = await Post.findById(postId);
+    if (!existedPost) return next(appError(400, '尚未發布貼文'));
+    if (existedPost.user.toString() !== user._id.toString())
+      return next(appError(400, '您無權限刪除此貼文'));
+
+    if (existedPost.messages.length) {
+      await Message.deleteMany({ _id: { $in: existedPost.messages } });
+    }
+    await Post.deleteOne({ _id: postId });
+    res.status(201).json(getHttpResponseContent('刪除貼文成功'));
+  }),
   // 移除貼文的按讚
   deleteLike: asyncHandleError(async (req, res, next) => {
     const {
@@ -207,6 +227,23 @@ const post = {
 
     await Post.updateOne({ _id: postId }, { $pull: { likes: user._id } });
     res.status(201).json(getHttpResponseContent('移除貼文的按讚成功'));
+  }),
+  // 刪除特定的留言
+  deleteMessage: asyncHandleError(async (req, res, next) => {
+    const {
+      user,
+      params: { messageId },
+    } = req;
+    if (!(messageId && isValidObjectId(messageId)))
+      return next(appError(400, '請傳入特定的留言'));
+
+    const existedMessage = await Message.findById(messageId);
+    if (!existedMessage) return next(appError(400, '尚未新增留言'));
+    if (existedMessage.user.toString() !== user._id.toString())
+      return next(appError(400, '您無權限刪除此留言'));
+
+    await Message.deleteOne({ _id: messageId });
+    res.status(201).json(getHttpResponseContent('刪除留言成功'));
   }),
 };
 
